syntax = "proto3";

package v15;

option java_multiple_files = true;
option java_package = 'kz.tansh.proto.v15';

import 'google/protobuf/empty.proto';

message GetAccountRequest {
  int32 account_number = 1;
}

message GetAccountResponse {
  int32 account_number = 1;
  int32 balance = 2;
}

message GetAllAccountsResponse {
  repeated GetAccountResponse accounts = 1;
}

message WithdrawRequest {
  int32 account_number = 1;
  int32 amount = 2;
}

message Money {
  int32 amount = 1;
}
service BankService {
  // unary
  rpc getAccountNumber(GetAccountRequest) returns (GetAccountResponse);
  rpc getAllAccounts(google.protobuf.Empty) returns (GetAllAccountsResponse);

  // rpc streaming
  rpc withdrawAccount(WithdrawRequest) returns (stream Money);
}
